# prueba-tecnica-grupo-ilao

./: .editorconfig  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  products.json  pyproject.toml
app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
app/static/js/: example.js
app/static_src/: package.json  tailwind.config.js
assets/css/: styles.css
src/frontend_test/: __init__.py
templates/: _item.html  backdrop.html  button.html  filter.html  footer.html  header.html  home.html  list.html  modal-filter.html
templates/layout/: base.html
