[project]
name = "frontend-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Felipe Gonzalez", email = "felipe.gonzalez@grupoilao.com" }
]
dependencies = [
    "django>=5.1.2",
    "django-tailwind[reload]>=3.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
universal = true
dev-dependencies = []

[tool.rye.behavior]
autosync = false
use-uv = true
global-python = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/frontend_test"]
